# notability-extractor

./: .gitignore  Makefile  README.md  notability_extractor.py  pyproject.toml  upload-to-pypi.sh
.github/workflows/: ci.yml
src/notability_extractor/: __init__.py  __main__.py  anki.py  cli.py  db.py  discovery.py  extractor.py  model.py  note_parser.py  utils.py
src/notability_extractor/archive/: __init__.py  backup.py  config.py  filter.py  scheduler.py  scheduler_install.py  store.py
src/notability_extractor/extract/: __init__.py  exporter.py  http_cache.py  nbn.py  platform_check.py
src/notability_extractor/gui/: app.py  main_window.py  theme.py
src/notability_extractor/gui/pages/: build.py  export.py  library.py  notes.py  settings.py  summaries.py
src/notability_extractor/gui/widgets/: card_editor.py  tag_filter.py  tag_input.py
tests/: conftest.py  test_anki.py  test_build_reader.py  test_build_writers.py  test_cli.py  test_db.py  test_discovery.py  test_extract_exporter.py  test_extract_http_cache.py  test_extract_nbn.py  test_extract_platform_check.py  test_extractor.py  test_model.py  test_note_parser.py
tests/archive/: test_backup.py  test_config.py  test_filter.py  test_scheduler.py  test_scheduler_install.py  test_store.py
tests/gui/: test_app_smoke.py  test_card_editor.py  test_library_page.py  test_tag_input.py
