[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notability-extractor"
version = "0.1.0"
description = "Extract flashcards from Notability's SQLite database and export to Anki .apkg"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["notability", "anki", "flashcards", "sqlite", "spaced-repetition"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Utilities",
]
dependencies = []

[project.scripts]
notability-extractor = "notability_extractor.cli:main"

[project.urls]
Homepage = "https://github.com/mdeguzis/notability-extractor"
Issues = "https://github.com/mdeguzis/notability-extractor/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/notability_extractor"]

# ---------------------------------------------------------------------------
# UV dev environment
# ---------------------------------------------------------------------------
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

# ---------------------------------------------------------------------------
# Ruff (lint + format)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["src/notability_extractor"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
