[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notability-extractor"
version = "0.1.0"
description = "Extract flashcards from Notability's SQLite database and export to Anki .apkg"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["notability", "anki", "flashcards", "sqlite", "spaced-repetition"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Utilities",
]
dependencies = [
    "genanki>=0.13.1",
    "PySide6>=6.6",
]

[project.scripts]
notability-extractor = "notability_extractor.cli:main"
notability-extractor-gui = "notability_extractor.gui.app:main"

[project.urls]
Homepage = "https://github.com/mdeguzis/notability-extractor"
Issues = "https://github.com/mdeguzis/notability-extractor/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/notability_extractor"]

# ---------------------------------------------------------------------------
# UV dev environment
# ---------------------------------------------------------------------------
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-qt>=4.4",
    "pyfakefs>=5.5",
    "ruff>=0.4",
    "pylint>=3.0",
    "mypy>=1.10",
    "pyright>=1.1.350",
    "black>=24.0",
    "autopep8>=2.0",
    "freezegun>=1.5.5",
]

# ---------------------------------------------------------------------------
# Ruff (lint + format)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["src/notability_extractor"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false

# ---------------------------------------------------------------------------
# Black (formatter, primary)
# ---------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py311"]

# ---------------------------------------------------------------------------
# autopep8 (formatter, fixup pass after black)
# ---------------------------------------------------------------------------
[tool.autopep8]
max-line-length = 100
aggressive = 1

# ---------------------------------------------------------------------------
# mypy (type checker, strict)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ---------------------------------------------------------------------------
# pyright (type checker, second opinion)
# ---------------------------------------------------------------------------
[tool.pyright]
include = ["src"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
# plist/sqlite walking code legitimately operates on dynamic heterogeneous data;
# forcing explicit casts everywhere clutters real logic without catching real bugs.
# mypy --strict still catches the things that actually matter (signatures, generics).
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"

# ---------------------------------------------------------------------------
# pylint (linter, primary - logic and design rules)
# ---------------------------------------------------------------------------
[tool.pylint.main]
py-version = "3.11"

[tool.pylint."messages control"]
# ruff already covers style rules, let pylint focus on logic and design
disable = [
    "line-too-long",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
]

[tool.pylint.format]
max-line-length = 100
