[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notability-extractor"
version = "0.1.0"
description = "Extract flashcards from Notability's SQLite database and export to Anki .apkg"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["notability", "anki", "flashcards", "sqlite", "spaced-repetition"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Utilities",
]
dependencies = [
    "genanki>=0.13.1",
    "PySide6>=6.6",
]

[project.scripts]
notability-extractor = "notability_extractor.cli:main"
notability-extractor-gui = "notability_extractor.gui.app:main"

[project.urls]
Homepage = "https://github.com/mdeguzis/notability-extractor"
Issues = "https://github.com/mdeguzis/notability-extractor/issues"

[tool.hatch.build]
# things that should never end up in the sdist or wheel.
# .venv-publish is created by upload-to-pypi.sh in the project root; without
# this exclude, hatchling tries to pack the venv's python symlink and fails.
exclude = [
    "/.venv*",
    "/.uv",
    "/build",
    "/dist",
    "/.pytest_cache",
    "/.mypy_cache",
    "/.ruff_cache",
    "/.superpowers",
    "/.claude",
    "/docs/superpowers",
    "**/__pycache__",
    "**/*.pyc",
    "*.apkg",
]

[tool.hatch.build.targets.wheel]
packages = ["src/notability_extractor"]

# ---------------------------------------------------------------------------
# UV dev environment
# ---------------------------------------------------------------------------
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-qt>=4.4",
    "pyfakefs>=5.5",
    "ruff>=0.4",
    "pylint>=3.0",
    "mypy>=1.10",
    "pyright>=1.1.350",
    "black>=24.0",
    "autopep8>=2.0",
    "freezegun>=1.5.5",
]

# ---------------------------------------------------------------------------
# Ruff (lint + format)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["src/notability_extractor"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false

# ---------------------------------------------------------------------------
# Black (formatter, primary)
# ---------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py311"]

# ---------------------------------------------------------------------------
# autopep8 (formatter, fixup pass after black)
# ---------------------------------------------------------------------------
[tool.autopep8]
max-line-length = 100
aggressive = 1

# ---------------------------------------------------------------------------
# mypy (type checker, strict)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ---------------------------------------------------------------------------
# pyright (type checker, second opinion)
# ---------------------------------------------------------------------------
[tool.pyright]
include = ["src"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
# plist/sqlite walking code legitimately operates on dynamic heterogeneous data;
# forcing explicit casts everywhere clutters real logic without catching real bugs.
# mypy --strict still catches the things that actually matter (signatures, generics).
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
# PySide6 stubs mark several APIs as non-Optional that can be None at runtime
# (QListWidget.item, QButtonGroup.checkedButton). Pyright's strict comparison
# check fires on perfectly defensive code. Disable it.
reportUnnecessaryComparison = "none"
# Signal.connect callbacks are commonly written as untyped lambdas. Annotating
# every one adds noise without catching bugs.
reportUnknownLambdaType = "none"
# fcntl vs msvcrt is bound via try/except + _HAS_FCNTL; pyright doesn't
# propagate the runtime invariant. mypy handles it correctly.
reportPossiblyUnboundVariable = "none"
reportConstantRedefinition = "none"
# Private attribute access between sibling classes in the GUI is intentional;
# refactoring to public getters/setters bloats the API for one consumer.
reportPrivateUsage = "none"
# contextlib.contextmanager is not deprecated; pyright bug.
reportDeprecated = "none"

# ---------------------------------------------------------------------------
# pylint (linter, primary - logic and design rules)
# ---------------------------------------------------------------------------
[tool.pylint.main]
py-version = "3.11"
# PySide6 uses C extensions; pylint can't introspect them without this
extension-pkg-allow-list = ["PySide6"]

[tool.pylint."messages control"]
# ruff already covers style rules, let pylint focus on logic and design
disable = [
    "line-too-long",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    # R0801: per-file test fixtures intentionally duplicate small helpers.
    # Sharing them across test files trades clarity for coupling — not worth it.
    "duplicate-code",
]

[tool.pylint.format]
max-line-length = 100
